frontend/src/css/NavBar.css
/* Color Palette */ 
:root {
  --grey: #A3A3A3; 
  --blue: #004970; 
}

.Container {
  padding: 10px 20px 0px;
}
.Main {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
  justify-content: space-between;
}

.Images {
  flex: 2;
}

.Images img{
  height: auto;
  width: fit-content;
}

#Talke {
  padding: 0px 0px 1rem 1rem;
  height: 50px;
}

.Pages {
  flex: 1;
  display: table;
  table-layout: fixed;
  width: 100%;
  border-spacing: 1rem;
}

.Pages a {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
  border: 2px solid white;
  background-color: var(--blue);
  color: white;
  text-decoration: none;
  padding: 1rem;
}
/* Page Hovering */ 
.Pages > a:hover {
  background-color: var(--grey);
  color: lightgrey;
}

/* Active Page */ 
.Pages > .active {
  background-color: var(--grey) !important;
  color: white;
}

.Diviser{
  height: 3px; 
  background-color: var(--blue);
  border-radius: 10px;
}

/* Tablet View */ 
@media only screen and (max-width: 1110px){

  #Talke {
    padding: 0;
  }

}

/* Mobile View */ 
@media only screen and (max-width: 780px){

  .Container {
    padding: 10px 20px 0px;
  }

  .Main{
    flex-direction: column;
    align-items: center;
  }
  .Images{
    display: flex;
    flex-direction: column;
    align-items: center;
  }

}

